Move to coc.nvim

--- a/dotfiles/.pylintrc
+++ b/dotfiles/.pylintrc
@@ -19,7 +19,7 @@ ignore-patterns=
 
 # Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
 # number of processors available to use.
-jobs=1
+jobs=2
 
 # Control the amount of potential inferred values when inferring a single
 # object. This can help the performance when dealing with large functions or
@@ -144,11 +144,11 @@ disable=print-statement,
         chained-comparison,
         too-few-public-methods,
         too-many-arguments,
+        consider-using-enumerate,
+        # class-variable-slots-conflict,
         too-many-locals,
-        too-many-lines,
-        relative-beyond-top-level,
-        consider-using-enumerate
-
+        C0330,
+        no-member,
 
 
 # Enable the message, report, category or checker with the given id(s). You can
@@ -309,7 +309,7 @@ indent-after-paren=4
 indent-string='    '
 
 # Maximum number of characters on a single line.
-max-line-length=100
+max-line-length=110
 
 # Maximum number of lines in a module.
 max-module-lines=1000
